objects/SLP_Process_Onboarding_User__c.object
<CustomObject>
    <description>To Process On Board Users From Excel Sheet</description>
    <fields>
        <fullName>Area_Of_Focus__c</fullName>
        <label>Area Of Focus</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Board_Contributor__c</fullName>
        <label>Board Contributor</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Board_Member__c</fullName>
        <label>Board Member</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Contributor__c</fullName>
        <label>Community Contributor</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Member__c</fullName>
        <label>Community Member</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failure_Log__c</fullName>
        <label>Failure Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormatValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FormatValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>101</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLP_BulkReg_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SLP BulkReg Id</label>
        <referenceTo>SLP_BulkReg__c</referenceTo>
        <relationshipLabel>SLP Process Onboarding Users</relationshipLabel>
        <relationshipName>SLP_Process_Onboarding_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success_Log__c</fullName>
        <label>Success Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>SLP Process Onboarding User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process_Onboard_Users Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLP Process Onboarding Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>